# Ammalgam-Solana-Auto-Trading-Bot

./: .env.example  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/common/: logger.rs  utils.rs
src/dex/: jupiter.rs  pumpfun.rs
src/engine/: copy_trader.rs  intent.rs  mod.rs
src/helius/: ws.rs
src/type/: events.rs
